RAPP: Cambios en view Restaurant html

--- a/pages/responsables.html
+++ b/pages/responsables.html
@@ -2,7 +2,7 @@
         <h1>DUEÑOS / RESPONSABLES</h1>
     </div>
     <div class="page-options">
-        <input type="text" ng-model="buscarRest" placeholder="Buscar restaurante..." style="margin-right: 1em;">
+        <input type="text" ng-model="buscarRest" placeholder="Buscar responsable..." style="margin-right: 1em;">
         <button class="button success" onclick="Metro.dialog.open('#crearRest')">CREAR RESPONSABLE</button>
     </div>
 
