RAPP: Controllers in multiple files

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
         <script src="assets/modules/angularJS/angular.min.js"></script>
         <!-- ANGULAR MODULE APP --> 
         <script src="assets/js/app.js"></script>
+        <script src="controllers/homeController.js"></script>
+        <script src="controllers/incidenceController.js"></script>
+        <script src="controllers/responsablesController.js"></script>
+        <script src="controllers/restaurantController.js"></script>
         
     </body>
 
