--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
                     </li>
                     <li class="item-separator"></li>
                     <li class="" id="menuAdminArea" ng-class="{'active': menuActive === 'AdminArea'}">
-                        <a href="javascript:void(0)">
+                        <a href="javascript:void(0)" ng-click="cambiaTemp(5)">
                             <span class="icon"><span class="mif-windows"></span></span>
                             <span class="caption">ADMIN AREA</span>
                         </a>
                     </li>
                     <li ng-class="{'active': menuActive === 'Documentos'}">
-                        <a href="javascript:void(0)">
+                        <a href="javascript:void(0)" ng-click="cambiaTemp(6)">
                             <span class="icon"><span class="mif-folder"></span></span>
                             <span class="caption">DOCUMENTOS</span>
                         </a>
@@ -80,6 +80,7 @@
         <script src="assets/modules/angularJS/angular.min.js"></script>
         <!-- ANGULAR MODULE APP --> 
         <script src="assets/js/app.js"></script>
+        <script src="services/factories.js"></script>
         <script src="controllers/homeController.js"></script>
         <script src="controllers/incidenceController.js"></script>
         <script src="controllers/responsablesController.js"></script>
