--- a/pages/restaurantes.html
+++ b/pages/restaurantes.html
@@ -27,10 +27,10 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="item in restaurantes | filter : buscarRest">
+            <tr ng-repeat="item in restaurants | filter : buscarRest">
                 <td>{{item.id}}</td>
                 <td><a href="javascript:void(0)" ng-click="viewRestaurant(item)">{{item.ref_cliente}}</a></td>
-                <td>{{item.nombre}}</td>
+                <td>{{item.name}}</td>
                 <td><a href="javascript:void(0)">{{item.responsable}}</a></td>
                 <td>{{item.alta}}</td>
                 <td>{{item.estatus}}</td>
@@ -88,7 +88,15 @@
                                 <input type="text" data-role="calendarpicker" data-locale="es-ES" data-format="%d %b %Y" ng-model="restaurantViewed.created">
                             </div>
                             <div class="cell-6">
-                                 <input type="text" placeholder="Nombre del responsable" ng-model="restaurantViewed.responsable">
+                                <input type="text" data-role="calendarpicker" data-locale="es-ES" data-format="%d %b %Y" ng-model="restaurantViewed.expire">
+                             </div>
+                        </div>
+                        <div class="row mb-4">
+                            <div class="cell-6">
+                                <input type="text" ng-model="restaurantViewed.email">
+                            </div>
+                            <div class="cell-6">
+                                <input type="text" ng-model="restaurantViewed.phone">
                              </div>
                         </div>
                         <div class="row mb-4">
@@ -101,7 +109,7 @@
                         </div>
                         <div class="row mb-4">
                             <div class="cell-12">
-                              <textarea id="" rows="6" placeholder="Descripción del restaurante" ng-model="restaurantViewed.description"></textarea>
+                              <textarea id="" rows="4" placeholder="Descripción del restaurante" ng-model="restaurantViewed.description"></textarea>
                             </div>
                         </div>
                    </div>
