--- a/pages/restaurantes.html
+++ b/pages/restaurantes.html
@@ -17,12 +17,12 @@
         <thead>
             <tr>
                 <td>ID</td>
-                <td>REF. CLIENTE</td>
+                <td>REFERENCIA</td>
                 <td>NOMBRE</td>
                 <td>RESPONSABLE</td>
-                <td>ALTA</td>
-                <td>ESTATUS</td>
-                <td>LOCALIZACIÓN</td>
+                <td>CREACIÓN</td>
+                <td>DIRECCIÓN</td>
+                <td>ESTADO</td>
                 <td></td>
             </tr>
         </thead>
