--- a/pages/responsables.html
+++ b/pages/responsables.html
@@ -102,13 +102,6 @@
                                 <input type="text" data-role="calendarpicker" data-locale="es-ES" data-format="%d %b %Y" ng-model="responsableViewed.date_add">
                         </div>
                     </div>
-                    <!-- 
-                    <div class="row mt-5">
-                        <div class="cell-12">
-                            <textarea type="text" ng-model="responsableViewed.comments" placeholder="Comentarios"></textarea>
-                        </div>
-                    </div>
-                -->
                     <div class="row mt-5">
                         <div class="cell-12">
                             <textarea type="text" ng-model="responsableViewed.description" placeholder="Descripción del responsable"></textarea>
@@ -124,13 +117,24 @@
                             </div>
                         </div>
                     </div>
+                    <hr>
+                    <div class="row mt-5">
+                        <div class="cell-12">
+                            <b>Comentarios privados sobre el responsable</b>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="cell-12">
+                                <textarea type="text" ng-model="responsableViewed.comments" placeholder="Comentario acerca del responsable"></textarea>
+                        </div>
+                    </div>
                 </div>
                 <div class="cell-6">
                     <table class="table striped">
                         <thead>
                             <tr>
                                 <td>ID</td>
-                                <td>REF. INCIDENCIA</td>
+                                <td>REFERENCIA</td>
                                 <td>ASUNTO</td>
                                 <td>FECHA</td>
                             </tr>
@@ -138,7 +142,7 @@
                         <tbody>
                             <tr>
                                 <td>001</td>
-                                <td>#456345E</td>
+                                <td>#IN456345E</td>
                                 <td>No se abre el menú</td>
                                 <td>20-03-2018</td>
                             </tr>
