--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             </div>
         </div>
     </div>
+        <script src="assets/modules/cryptoJS/cryptoJS-3.1.2.js"></script>
         <script src="assets/modules/jquery.js"></script>
         <script src="assets/modules/metroUI/js/metro.min.js"></script>
         <script src="assets/modules/angularJS/angular.min.js"></script>
