auth and login functionality

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
             <div class="navview-content">
                 <div class="page-title">
-                    <span>Bienvenido Administrador</span>
+                    <span>Bienvenido {{LOCAL_COOKIES.userCookie}}</span>
                 </div>
                 <div class="" ng-if="loading">
                     <div data-role="progress" data-type="line" data-small="true"></div>
