Login and redrect function

--- a/login.html
+++ b/login.html
@@ -20,8 +20,8 @@
                 <div class="login-row">
                     <button class="button secondary" style="width: 100%">REGISTRO</button>
                 </div>
-                <div class="remark alert" ng-if="errorLogin">
-                    Porfavor rellena los campos requeridos.
+                <div class="error-login" ng-if="errorLogin">
+                    Usuario y/o contraseña incorrectos
                 </div>
             </div>
         </div>
